# Intelligent-Document-Reference

./: .env.example  .gitignore  IntelligentDocRef_Service.spec  LICENSE  README.md  SCAFFOLDING_NOTES.md  app.py  file_registry.db  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  chat_memory.py  deps.py  main.py  requirements.txt  schemas.py  test_integration.py
backend/api/: routes_chat.py  routes_files.py  routes_jobs.py  routes_mini.py  routes_settings.py  routes_watcher.py
backend/benchmark/: generator.py  quality_test.py  runner.py
backend/database/: __init__.py  metadata.py  schema.sql
backend/vectordb/: chroma_impl.py  factory.py  interface.py  sqlite_impl.py
benchmarks/: __init__.py  default_benchmark.yaml  graphs.py  models.py  runner.py  scoring.py
config/: file_indexing.yaml  models.yaml  paths.yaml  settings.py
core/: __init__.py  bootstrap.py  context.py  lifecycle.py  runtime_config.py  wiring.py
datasets/dataset0/: changelog.txt  glossary.txt  meeting_notes.txt  readme.txt
datasets/dataset1/: Dockerfile  app.js  app.py  index.html  requirements.txt  search_engine.py  styles.css  utils.py
datasets/dataset10/: architecture.md  deployment.md  faq.md  getting-started.md  index.md  troubleshooting.md
datasets/dataset11/: relevance_judgments.tsv  server_metrics.csv  stock_prices.csv  team_directory.json
datasets/dataset13/: README.md  pom.xml
datasets/dataset14/: docusaurus.config.js  sidebar.json
datasets/dataset15/: README.md
datasets/dataset16/: README.md
datasets/dataset17/: Cargo.toml  Makefile  README.md
datasets/dataset3/: README.txt
datasets/dataset4/: README.txt
datasets/dataset5/: notes.txt  summary.md
datasets/dataset6/: index.txt
db/: __init__.py  metadata.py  schema.sql  settings_store.py  unified.py  vectorstore.py
docs/: MINI_MODE.md  TKINTER_SETUP.md
embeddings/: __init__.py  base.py  embedder.py  router.py
evaluation/: accuracy.py  benchmarks.py  queries.yaml
inference/: README.md  __init__.py  citation.py  rag.py  responder.py  retrieval_cache.py  retriever.py  router.py
ingestion/: README.md  __init__.py  boilerplate.py  change_detector.py  code_syntax.py  config.py  crawler.py  dedup.py  embedding_adapter.py  extension_registry.py  image_description_cache.py  indexer.py  models.py  orchestrator.py  parser.py  pipeline.py  preprocessing.py
jobs/: __init__.py  queue.py  scheduler.py  state.py  worker.py
mcp/: server.py  tools.py
model_clients/: __init__.py  base.py  errors.py  google_client.py  ollama_client.py  openai_client.py  registry.py  voyage_client.py
rag/: README.md  __init__.py  boilerplate.py  chunking.py  config.py  crawler.py  dedup.py  density_filter.py  embedding_adapter.py  merger.py  pipeline.py
scripts/: build.py  cspyformatter.py  dev_bootstrap.py  file_picker.py  folder_picker.py  graph_benchmark_log.py  preprocess.py  reindex.py  seed_index.py  test_parsing.py  test_retrieval_e2e.py  test_retrieval_gemini.py
src/: main.py
tests/: conftest.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
watcher/: __init__.py  adapters.py  debounce.py  events.py  main.py  service.py  watcher.py
(+434 files in other folders)
