[tool.poetry]
name = "local-rag-architecture"
version = "0.1.0"
description = "Architecture scaffold for local-first RAG system"
authors = ["team@example.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = {extras = ["standard"], version = "^0.22"}
pydantic = "^2.0.0"
typer = "^0.7.0"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21"
black = "^24.3"
isort = "^6.0"

